; ModuleID = '/home/carl/AnghaBench/linux/tools/perf/util/extr_evlist.c_evlist__exit.c'
source_filename = "/home/carl/AnghaBench/linux/tools/perf/util/extr_evlist.c_evlist__exit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.evlist = type { %struct.TYPE_2__, i32, i32 }
%struct.TYPE_2__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @evlist__exit(%struct.evlist* %0) #0 {
  %2 = alloca %struct.evlist*, align 8
  store %struct.evlist* %0, %struct.evlist** %2, align 8
  %3 = load %struct.evlist*, %struct.evlist** %2, align 8
  %4 = getelementptr inbounds %struct.evlist, %struct.evlist* %3, i32 0, i32 2
  %5 = call i32 @zfree(i32* %4)
  %6 = load %struct.evlist*, %struct.evlist** %2, align 8
  %7 = getelementptr inbounds %struct.evlist, %struct.evlist* %6, i32 0, i32 1
  %8 = call i32 @zfree(i32* %7)
  %9 = load %struct.evlist*, %struct.evlist** %2, align 8
  %10 = getelementptr inbounds %struct.evlist, %struct.evlist* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = call i32 @fdarray__exit(i32* %11)
  ret void
}

declare dso_local i32 @zfree(i32*) #1

declare dso_local i32 @fdarray__exit(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
